--- a/about.html
+++ b/about.html
@@ -7,30 +7,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+    <header class="main-header">
         <h1>About Arhaan Memon</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="about.html" class="active">About</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section>
-            <h2>Who Am I?</h2>
-            <p>My name is Arhaan Memon. I am a passionate student with a strong interest in leadership, technology, and innovation. I am currently involved in various projects that aim to make a positive impact in my community.</p>
-        </section>
-
-        <section>
-            <h2>My Interests</h2>
-            <p>I have a deep passion for computer science, and I love exploring new technologies. Additionally, I am the founder of a youth leadership non-profit, and I enjoy working on initiatives that empower young people to become future leaders.</p>
-        </section>
-
-        <section>
-            <h2>My Goals</h2>
-            <p>My goal is to continue developing my skills in technology and leadership, and to contribute to projects that create meaningful change. I aim to inspire others to pursue their passions and to work towards a better future.</p>
+        <section class="about-content">
+            <h2>About Me</h2>
+            <p>Hello! I'm Arhaan Memon. I'm a student with a deep passion for Basketball, Computer Science, and Data Analytics. I love combining my interests to explore new opportunities and challenges in these fields.</p>
         </section>
     </main>
 
