--- a/index.html
+++ b/index.html
@@ -7,25 +7,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to Arhaan Memon's Website</h1>
+    <header class="main-header">
+        <h1>Arhaan Memon</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section>
-            <h2>Introduction</h2>
-            <p>Hello! My name is Arhaan Memon. Welcome to my personal website. Here you can learn more about me, my interests, and my journey.</p>
-        </section>
-
-        <section>
-            <h2>Latest News</h2>
-            <p>Stay tuned for the latest updates and news about my academic projects and extracurricular activities.</p>
+        <section class="intro">
+            <h2>Welcome to My Website</h2>
+            <p>I am passionate about <strong>Basketball</strong>, <strong>Computer Science</strong>, and <strong>Data Analytics</strong>.</p>
         </section>
     </main>
 
