Trying new styles

--- a/about.html
+++ b/about.html
@@ -7,25 +7,33 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="main-header">
-        <h1>About Arhaan Memon</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html" class="active">About</a></li>
-            </ul>
+    <header>
+        <nav class="navbar">
+            <div class="container">
+                <h1 class="logo"><a href="index.html">Arhaan Memon</a></h1>
+                <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html" class="active">About</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Gallery</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Resume</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
 
-    <main>
-        <section class="about-content">
+    <main class="content-section">
+        <div class="container">
             <h2>About Me</h2>
             <p>Hello! I'm Arhaan Memon. I'm a student with a deep passion for Basketball, Computer Science, and Data Analytics. I love combining my interests to explore new opportunities and challenges in these fields.</p>
-        </section>
+        </div>
     </main>
 
     <footer>
-        <p>&copy; 2024 Arhaan Memon. All rights reserved.</p>
+        <div class="container">
+            <p>&copy; 2024 Arhaan Memon. All rights reserved.</p>
+        </div>
     </footer>
 </body>
 </html>
