--- a/index.html
+++ b/index.html
@@ -7,25 +7,33 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="main-header">
-        <h1>Arhaan Memon</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="about.html">About</a></li>
-            </ul>
+    <header>
+        <nav class="navbar">
+            <div class="container">
+                <h1 class="logo"><a href="index.html">Arhaan Memon</a></h1>
+                <ul class="nav-links">
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Gallery</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Resume</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
 
-    <main>
-        <section class="intro">
+    <main class="hero-section">
+        <div class="container">
             <h2>Welcome to My Website</h2>
             <p>I am passionate about <strong>Basketball</strong>, <strong>Computer Science</strong>, and <strong>Data Analytics</strong>.</p>
-        </section>
+        </div>
     </main>
 
     <footer>
-        <p>&copy; 2024 Arhaan Memon. All rights reserved.</p>
+        <div class="container">
+            <p>&copy; 2024 Arhaan Memon. All rights reserved.</p>
+        </div>
     </footer>
 </body>
 </html>
