--- a/about.html
+++ b/about.html
@@ -14,22 +14,51 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html" class="active">About</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Resume</a></li>
+                    <li><a href="#">Blogs</a></li>
+                    <li><a href="#">Search</a></li>
+                    <li><a href="#">Read Me</a></li>
                 </ul>
             </div>
         </nav>
     </header>
 
-    <main class="content-section">
-        <div class="container">
-            <h2>About Me</h2>
-            <p>Hello! I'm Arhaan Memon. I'm a student with a deep passion for Basketball, Computer Science, and Data Analytics. I love combining my interests to explore new opportunities and challenges in these fields.</p>
-        </div>
-    </main>
+</nav>
+<main class="content-section">
+    <div class="container">
+        <h2>About Me</h2>
+        <pre>
+My name is Arhaan Memon, and I am a 10th grader with a passion for both academics and athletics. 
+Balancing my time between the classroom and the basketball court, I strive to excel in everything 
+I do. 
 
+I have a deep love for basketball and am proud to represent my high school team as a player. 
+The thrill of competition, the camaraderie with my teammates, and the lessons in perseverance 
+and teamwork are experiences that have shaped who I am today. Every time I step onto the court, 
+I am reminded of the importance of discipline, hard work, and determination—qualities that 
+I apply not just in sports, but in every aspect of my life.
+
+Beyond the basketball court, I have a strong passion for computer science and data analytics. 
+The world of technology fascinates me, and I am constantly seeking to learn more about how 
+it can be used to solve real-world problems. Whether it's coding a new application, analyzing 
+data sets, or simply exploring the latest advancements in the tech industry, I am always 
+eager to expand my knowledge and skills.
+
+In the future, I aim to pursue a career in computer science, where I can combine my love for 
+technology with my analytical skills to make a meaningful impact. I believe that the intersection 
+of sports and technology offers unique opportunities, and I am excited to explore how data 
+analytics can be used to enhance athletic performance and strategy.
+
+As I continue my journey through high school, I am committed to growing both as a student 
+and as an athlete. I believe that my experiences in both arenas will prepare me for the challenges 
+ahead and help me achieve my goals. Thank you for visiting my website, and I hope you will join 
+me as I continue to pursue my passions and make the most of every opportunity that comes my way.
+
+If you would like to learn more about my projects, interests, or just connect, feel free to 
+reach out through the contact page. I'm always open to new ideas, collaborations, and 
+discussions about basketball, technology, or anything in between.
+        </pre>
+    </div>
+</main>
     <footer>
         <div class="container">
             <p>&copy; 2024 Arhaan Memon. All rights reserved.</p>
