--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
                 <ul class="nav-links">
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Resume</a></li>
+                    <li><a href="#">Blogs</a></li>
+                    <li><a href="#">Search</a></li>
+                    <li><a href="#">Read Me</a></li>
                 </ul>
             </div>
         </nav>
