Added blogs page

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html" class="active">About</a></li>
-                    <li><a href="#">Blogs</a></li>
+                    <li><a href="blogs.html">Blogs</a></li>
                     <li><a href="#">Search</a></li>
                     <li><a href="#">Read Me</a></li>
                 </ul>
