--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <ul class="nav-links">
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="#">Blogs</a></li>
+                    <li><a href="blogs.html">Blogs</a></li>
                     <li><a href="#">Search</a></li>
                     <li><a href="#">Read Me</a></li>
                 </ul>
