Pong game added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <ul class="nav-links">
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="blogs.html">Blogs</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="#">Search</a></li>
                     <li><a href="#">Read Me</a></li>
                 </ul>
@@ -26,6 +26,8 @@
         <div class="container">
             <h2>Welcome to My Website</h2>
             <p>I am passionate about <strong>Basketball</strong>, <strong>Computer Science</strong>, and <strong>Data Analytics</strong>.</p>
+            <h3>Play Pong!</h3>
+            <canvas id="pongCanvas" width="600" height="400"></canvas>
         </div>
     </main>
 
@@ -34,5 +36,8 @@
             <p>&copy; 2024 Arhaan Memon. All rights reserved.</p>
         </div>
     </footer>
+
+    <!-- Include the Pong game JavaScript file -->
+    <script src="pong.js"></script>
 </body>
 </html>
