--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <main>
         <div class="container">
             <h2>About Me</h2>
-            <img src="https://photos.app.goo.gl/1nCa2ewjxBU14Wpo8" alt="Arhaan Memon" style="width:200px; float:left; margin-right:20px;">
+            <img src="images/arhaan.jpg" alt="Arhaan Memon" style="width:200px; float:left; margin-right:20px;">
             <p>Hello! I am Arhaan Memon, a 10th grader passionate about basketball, computer science, and data analytics. I play for my high school basketball team, where I learn the value of discipline and teamwork.</p>
             <p>Beyond sports, my interests in computer science and data analytics drive me to explore innovative solutions through technology. I aspire to combine my love for tech and sports to create impactful projects in the future.</p>
         </div>
