--- a/about.html
+++ b/about.html
@@ -18,7 +18,8 @@
             <p>Hello! I am Arhaan Memon, a 10th grader passionate about basketball, computer science, and data analytics. I play for my high school basketball team, where I learn the value of discipline and teamwork.</p>
             <p>Beyond sports, my interests in computer science and data analytics drive me to explore innovative solutions through technology. I aspire to combine my love for tech and sports to create impactful projects in the future.</p>
         </div>
-    </main>
+        <div class "grid_container" id="grid_container">
+        </main>
 
     <footer>
         <div class="container">
@@ -31,6 +32,25 @@
         fetch('menu.html')
             .then(response => response.text())
             .then(data => document.getElementById('menu-container').innerHTML = data);
+    </script>
+    <script>
+        // 1. Make a connection to the HTML container
+        var container = document.getElementById("grid_container");
+    
+        // 2. Define a Javascript object for our data
+        var living_in_the_world = {
+            {"flag": "Flag_of_California", "time_lived": "Forever", "greeting": "Hey"},
+            {"flag": "Flag_of_Oregon", "time_lived": "9-years", "greeting": "Hello"},
+            {"flag": "Flag_of_England", "time_lived": "2-years", "greeting": "Alright mate"},
+            {"flag": "Flag_of_Oregon", "time_lived": "2-years", "greeting": "Aloha"},
+        }; 
+        
+        // 3a. Consider how to update style count for size of container
+        // 3b. Build a grid items inside of our container for each row of data
+        for (var row of living_in_the_world) {
+            // make a "div" with "class grid_item "div" for each row
+            // add "img" tag and "p" tags for data
+        }
     </script>
 </body>
 </html>
