--- a/about.html
+++ b/about.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arhaan Memon - About</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .grid-container {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 10px;
+        }
+        .grid-item {
+            text-align: center;
+        }
+        .grid-item img {
+            width: 100%;
+            height: auto;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -18,8 +32,25 @@
             <p>Hello! I am Arhaan Memon, a 10th grader passionate about basketball, computer science, and data analytics. I play for my high school basketball team, where I learn the value of discipline and teamwork.</p>
             <p>Beyond sports, my interests in computer science and data analytics drive me to explore innovative solutions through technology. I aspire to combine my love for tech and sports to create impactful projects in the future.</p>
         </div>
-        <div class "grid_container" id="grid_container">
-        </main>
+        <div class = "grid_container" id="grid_container">
+                <div class="grid-item">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/0/01/Flag_of_California.svg" alt="California Flag">
+                    <p>California - forever</p>
+                </div>
+                <div class="grid-item">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b9/Flag_of_Oregon.svg" alt="Oregon Flag">
+                    <p>Oregon - 9 years</p>
+                </div>
+                <div class="grid-item">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/b/be/Flag_of_England.svg" alt="England Flag">
+                    <p>England - 2 years</p>
+                </div>
+                <div class="grid-item">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/e/ef/Flag_of_Hawaii.svg" alt="Hawaii Flag">
+                    <p>Hawaii - 2 years</p>
+                </div>
+            </div>
+                </main>
 
     <footer>
         <div class="container">
