--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                     <p>California - forever</p>
                 </div>
                 <div class="grid-item">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b9/Flag_of_Oregon.svg" alt="Oregon Flag">
+                    <img src="https://en.wikipedia.org/wiki/Flag_of_India#/media/File:Flag_of_India.svg" alt="Oregon Flag">
                     <p>Oregon - 9 years</p>
                 </div>
                 <div class="grid-item">
@@ -71,9 +71,9 @@
         // 2. Define a Javascript object for our data
         var living_in_the_world = {
             {"flag": "Flag_of_California", "time_lived": "Forever", "greeting": "Hey"},
-            {"flag": "Flag_of_Oregon", "time_lived": "9-years", "greeting": "Hello"},
+            {"flag": "Flag_of_India", "time_lived": "9-years", "greeting": "Namaste"},
             {"flag": "Flag_of_England", "time_lived": "2-years", "greeting": "Alright mate"},
-            {"flag": "Flag_of_Oregon", "time_lived": "2-years", "greeting": "Aloha"},
+            {"flag": "Flag_of_Hawaii", "time_lived": "2-years", "greeting": "Aloha"},
         }; 
         
         // 3a. Consider how to update style count for size of container
