Change the images and description on page

--- a/about.html
+++ b/about.html
@@ -38,8 +38,8 @@
                     <p>California - forever</p>
                 </div>
                 <div class="grid-item">
-                    <img src="https://en.wikipedia.org/wiki/Flag_of_India#/media/File:Flag_of_India.svg" alt="Oregon Flag">
-                    <p>Oregon - 9 years</p>
+                    <img src="https://en.wikipedia.org/wiki/Flag_of_India#/media/File:Flag_of_India.svg" alt="India Flag">
+                    <p>India - 9 years</p>
                 </div>
                 <div class="grid-item">
                     <img src="https://upload.wikimedia.org/wikipedia/en/b/be/Flag_of_England.svg" alt="England Flag">
