Changing link for India flag

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                     <p>California - forever</p>
                 </div>
                 <div class="grid-item">
-                    <img src="https://en.wikipedia.org/wiki/Flag_of_India#/media/File:Flag_of_India.svg" alt="India Flag">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAWQgQstiKa1U6P0QfpcnlRUbIR0IvIDfhAQ&s" alt="India Flag">
                     <p>India - 9 years</p>
                 </div>
                 <div class="grid-item">
