Changing from html to md

--- a/about.html
+++ b/about.html
@@ -38,8 +38,8 @@
                     <p>California - forever</p>
                 </div>
                 <div class="grid-item">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAWQgQstiKa1U6P0QfpcnlRUbIR0IvIDfhAQ&s" alt="India Flag">
-                    <p>India - 9 years</p>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b9/Flag_of_Oregon.svg" alt="Oregon Flag">
+                    <p>Oregon - 9 years</p>
                 </div>
                 <div class="grid-item">
                     <img src="https://upload.wikimedia.org/wikipedia/en/b/be/Flag_of_England.svg" alt="England Flag">
@@ -50,7 +50,7 @@
                     <p>Hawaii - 2 years</p>
                 </div>
             </div>
-                </main>
+        </main>
 
     <footer>
         <div class="container">
